src/PyFlaskGrammar/PythonParser.g4
parser grammar PythonParser;

options { tokenVocab = PythonLexer; }
tokens { INDENT, DEDENT }

// -------------------------------------------------
// PROGRAM
// -------------------------------------------------
prog
    : stat* EOF
    ;

// -------------------------------------------------
// STATEMENTS
// -------------------------------------------------
stat
    : assignStat
    | printStat
    | ifStat
    | forStat
    | whileStat
    | funcDef
    | classDef
    | returnStat
    | breakStat
    | continueStat
    | importStat
    | exprStat
    | globalStat
    | arrayAssignStat
    | NEWLINE
    ;

printStat
    : PRINT LPARENS expr RPARENS NEWLINE?              # PrintStatement
    ;

assignStat
    : VAR? expr ASSIGN expr NEWLINE?                     # Assignment
    ;

exprStat
    : expr NEWLINE?
    ;

returnStat
    : RETURN expr (COMMA NUMBER)? NEWLINE?                             # ReturnStatement
    ;

breakStat
    : BREAK NEWLINE?                                   # BreakStatement
    ;

continueStat
    : CONTINUE NEWLINE?                                # ContinueStatement
    ;

arrayAssignStat
    : expr LSB expr RSB ASSIGN expr NEWLINE?    # ArrayAssignment
    ;
globalStat
    : GLOBAL ID (COMMA ID)* NEWLINE?;
// -------------------------------------------------
// IMPORTS
// -------------------------------------------------
importStat
        :IMPORT dottedName (COMMA dottedName)* NEWLINE #ImportModule
        | FROM dottedName IMPORT ID (COMMA ID)* NEWLINE #ImportFrom
;

dottedName : ID (DOT ID)* ;


// -------------------------------------------------
// FUNCTIONS
// -------------------------------------------------
funcDef
    : decorator* DEF ID LPARENS paramList? RPARENS COLON? NEWLINE block # FunctionDefinition
    ;

paramList
    : ID (COMMA ID)*
    ;

classDef
    : CLASS ID (LPARENS ID RPARENS)? COLON NEWLINE block
      # ClassDefinition
    ;
decorator
    : AT dottedName LPARENS argList? RPARENS NEWLINE       # DecoratorExpr
//    | AT dottedName NEWLINE                                # DecoratorNoArgs
    ;

// -------------------------------------------------
// CONTROL FLOW
// -------------------------------------------------
ifStat
    : IF expr COLON NEWLINE block (NEWLINE* ELSE COLON? NEWLINE block)?
    ;

forStat
    : FOR expr IN expr COLON NEWLINE block                # ForStatement
    ;

whileStat
    : WHILE expr NEWLINE block                             # WhileStatement
    ;

block
    : INDENT stat+ DEDENT
    ;

// -------------------------------------------------
// EXPRESSIONS
// -------------------------------------------------
expr
    : expr op=(OR|AND) expr                      # LogicalExpr
    | expr op=(MUL|DIV) expr                     # MultDivExpr
    | expr op=(ADD|SUB) expr                     # AddSubExpr
    | expr op=(LT|GT|GE|LE|EQ|NE) expr           # ComparisonExpr
    | expr LSB expr RSB                          # IndexExpr
    | LPARENS ID FOR ID IN expr (IF expr)? RPARENS # GeneratorExpression
    | ID LPARENS argList? RPARENS                # FunctionCallExpr
    | expr DOT expr                              # AttributeExpr
    | expr (COMMA expr)+                         # TupleExpr
    | LSB NEWLINE* argList? NEWLINE* RSB                           # ArrayLiteral
    | LPARENS expr RPARENS                       # ParenExpr
    | LBK dictBody? RBK                          # DictLiteral
    | NUMBER                                     # NumberLiteral
    | STRING                                     # StringLiteral
    | BOOL                                       # BooleanLiteral
    | ID                                         # IdentifierExpr
;

dictBody: NEWLINE* pair (NEWLINE* ',' NEWLINE* pair)* NEWLINE*;

pair: STRING COLON expr;


//argList : (arg (COMMA arg)*)?;
argList
    : NEWLINE*
      arg
      (NEWLINE* COMMA NEWLINE* arg)*
      NEWLINE*
    ;
arg
    : ID ASSIGN expr
    | expr
    ;
